--- a/Task-2-Portfolio/index.html
+++ b/Task-2-Portfolio/index.html
@@ -131,7 +131,7 @@
                     <img src="./assets/calculator.png" alt="">
                     <div class="card-content">
                         <h1>Caculator</h1>
-                        <a href="#" class="preview" target="_blank">Preview</a>
+                        <a href="https://calculator-zeta-bay.vercel.app/" class="preview" target="_blank">Preview</a>
                     </div>
                 </div>
                 <div class="project-card">
